--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,6 @@
     <title>index</title>
 </head>
 <body>
-<h1>Spring Security Hands-On</h1>
-<h3>Class Project</h3>
+<h1>Reilly Bank</h1>
 </body>
 </html>
